# OA-SLAM

./: CMakeLists.txt  LICENSE  README.md  build.sh  build_Thirdparty.sh  generate_files_Osmap.sh
Cameras/: TUM1.yaml  TUM2.yaml  TUM3.yaml
Data/: detections_yolov5_sink_13.json  detections_yolov5_sink_18.json  detections_yolov5_sink_21.json  detections_yolov5_table_13.json  detections_yolov5_table_6.json  detections_yolov5_table_9.json  detections_yolov5_tum_rgbd_fr2_desk.json
Examples/: oa-slam.cc  oa-slam_localization.cc
include/: ARViewer.h  Distance.h  Ellipsoid.h  FrameDrawer.h  ImageDetections.h  KeyFrame.h  LocalMapping.h  Localization.h  Map.h  MapDrawer.h  MapObject.h  MapPoint.h  ORBmatcher.h  ObjectTrack.h  OptimizerObject.h  Osmap.h  System.h  Tracking.h  Utils.h  Viewer.h  osmap.pb.h  shader.h
src/: ARViewer.cc  Distance.cc  Ellipsoid.cc  FrameDrawer.cc  ImageDetections.cc  KeyFrame.cc  LocalMapping.cc  LocalObjectMapping.cc  Localization.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  ORBmatcher.cc  ObjectTrack.cc  Osmap.cpp  System.cc  Tracking.cc  Viewer.cc
